# city-spellcheck-web-api

./: Cargo.toml  Rocket.toml
src/: lib.rs  main.rs  score.rs
tests/: unit_test.rs
