[package]
name = "city-spellcheck"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
distance = "0.4.0"
rocket = "0.4.0"
serde_derive = "1.0.84"
serde = "1.0.84"
sublime_fuzzy = "0.6.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
